Fixed up the aero-body for display compatibility. Added bootstrap css to the Spectator Client in order to make the content more fluid, and fix alignment.

--- a/Common/css/style.css
+++ b/Common/css/style.css
@@ -46,11 +46,12 @@ header {
 	margin:5px;
 }
 
-.aero-body {
+#aero-body {
 	margin-left: 180px;
+	width: 100%;
 }
 
-.aero-body.sidebar-closed {
+#aero-body.sidebar-closed {
 	margin-left: 70px;
 }
 
